# apollo_ros

./: .gitattributes  .gitignore  README.md  apollo.sh  stop_proc.sh
src/cyber/: CMakeLists.txt  cyber.h  init.cc  package.xml  setup.bash
src/cyber/common/: environment.h  file.cc  file.h
src/cyber/proto/: CMakeLists.txt
src/cyber/record/: header_builder.h
src/cyber/record/file/: record_file_reader.h  record_file_writer.cc  record_file_writer.h
src/launch/: CMakeLists.txt  driver.launch  package.xml  perception.launch  perception_lidar.launch  start_all.launch
src/modules/common/: CMakeLists.txt  package.xml
src/modules/common/configs/proto/: CMakeLists.txt
src/modules/common/monitor_log/: monitor_logger.cc  monitor_logger.h
src/modules/common/monitor_log/proto/: CMakeLists.txt
src/modules/common/proto/: CMakeLists.txt
src/modules/common/util/: message_util.h
src/modules/drivers/: CMakeLists.txt  package.xml
src/modules/drivers/canbus/: CMakeLists.txt
src/modules/drivers/canbus/can_client/socket/: socket_can_client_raw.cc
src/modules/drivers/canbus/proto/: CMakeLists.txt
src/modules/drivers/msg/: ClusterListStatus_600.msg  ContiRadar.msg  ContiRadarObs.msg  ObjectListStatus_60A.msg  RadarState_201.msg
src/modules/drivers/proto/: CMakeLists.txt
src/modules/drivers/radar/conti_radar/: CMakeLists.txt  conti_radar_canbus_component.cc  conti_radar_canbus_component.h  conti_radar_canbus_node.cc  conti_radar_message_manager.cc  conti_radar_message_manager.h
src/modules/drivers/radar/conti_radar/conf/: radar_front_conf.pb.txt
src/modules/drivers/radar/conti_radar/launch/: conti_radar.launch
src/modules/drivers/radar/conti_radar/proto/: CMakeLists.txt
src/modules/drivers/radar/racobit_radar/proto/: CMakeLists.txt
src/modules/drivers/radar/racobit_radar/protocol/: cluster_general_info_701.cc  object_general_info_60b.cc
src/modules/localization/: CMakeLists.txt  package.xml
src/modules/localization/msg/: LocalizationEstimate.msg  Pose.msg  Uncertainty.msg
src/modules/localization/proto/: CMakeLists.txt
src/modules/map/: CMakeLists.txt  package.xml
src/modules/map/hdmap/: hdmap_util.cc  hdmap_util.h
src/modules/map/proto/: CMakeLists.txt
src/modules/perception/: CMakeLists.txt  package.xml
src/modules/perception/base/: CMakeLists.txt  common.h  frame.h  object.cc  point_cloud.h
src/modules/perception/camera/: CMakeLists.txt
src/modules/perception/camera/app/: debug_info.cc  obstacle_camera_perception.cc  obstacle_camera_perception.h
src/modules/perception/camera/app/proto/: CMakeLists.txt
src/modules/perception/camera/common/: data_provider.cc  data_provider.h  object_template_manager.cc  object_template_manager.h  util.cc  util.h
src/modules/perception/camera/common/proto/: CMakeLists.txt
src/modules/perception/camera/lib/interface/: base_camera_perception.h  base_obstacle_detector.h
src/modules/perception/camera/tools/: transform_server.cc  visualizer.cc  visualizer.h
src/modules/perception/common/: CMakeLists.txt  perception_gflags.cc
src/modules/perception/common/geometry/: BUILD
src/modules/perception/common/i_lib/: BUILD
src/modules/perception/common/i_lib/pc/: BUILD
src/modules/perception/common/io/: BUILD  io_util.cc  io_util.h  io_util_test.cc
src/modules/perception/common/sensor_manager/: sensor_manager.cc  sensor_manager.h
src/modules/perception/inference/: BUILD  CMakeLists.txt  inference_factory.cc
src/modules/perception/inference/caffe/: BUILD
src/modules/perception/inference/onnx/: onnx_obstacle_detector.h
src/modules/perception/inference/operators/: BUILD
src/modules/perception/inference/paddlepaddle/: BUILD
src/modules/perception/inference/tensorrt/: BUILD  batch_stream.cc  batch_stream_test.cc  entropy_calibrator.cc  entropy_calibrator.h  entropy_calibrator_test.cc  rt_common.cc  rt_common.h  rt_net.cc  rt_net.h  rt_net_test.cc
src/modules/perception/inference/tensorrt/plugins/: BUILD  argmax_plugin.cu  (+13 more)
src/modules/perception/inference/tools/: BUILD
src/modules/perception/inference/utils/: BUILD  resize.cu  util.h  util_test.cc
src/modules/perception/lib/: CMakeLists.txt
src/modules/perception/lib/config_manager/: config_manager.cc  config_manager.h
src/modules/perception/lib/thread/: thread_worker.h
src/modules/perception/lib/utils/: time_util_test.cc
src/modules/perception/lidar/: CMakeLists.txt
src/modules/perception/lidar/app/: lidar_app_lidar_pipeline_test.cc
src/modules/perception/map/: CMakeLists.txt
src/modules/perception/map/hdmap/: hdmap_input.cc  hdmap_input.h
src/modules/perception/onboard/: CMakeLists.txt  fusion_camera_detection.cc  fusion_camera_detection.h  fusion_camera_detection_component.cc  fusion_camera_detection_node.cc  lidar_detection_evaluate_node.cc  perception_camera_node.cc  perception_lidar_node.cc
src/modules/perception/onboard/component/: detection_component.cc  detection_component.h  fusion_camera_detection_component.cc  fusion_camera_detection_component.h  fusion_component.cc  fusion_component.h  recognition_component.cc  recognition_component.h
src/modules/perception/onboard/msg_serializer/: msg_serializer.cc
src/modules/perception/onboard/proto/: CMakeLists.txt  lidar_component_config.proto
src/modules/perception/onboard/transform_wrapper/: transform_wrapper.cc
src/modules/perception/proto/: CMakeLists.txt  probabilistic_fusion_config.proto
src/modules/tools/data_conversion/: CMakeLists.txt  channel_info.cc  convert.cc  convert.h  package.xml  record_to_rosbag.cc  rosbag_to_record.cc
src/modules/tools/data_conversion/lib/: channel_info.cc  channel_info.h  convert.cc  convert.h
src/modules/tools/data_conversion/rosbag_to_record/: channel_info.cc  channel_info.h  rosbag_to_record.cc
src/modules/tools/sensor_visualizer/: CMakeLists.txt  marker_color.h  package.xml  viz_conti_radar.cpp
src/modules/transform/: CMakeLists.txt  buffer.cc  buffer.h  buffer_interface.h  package.xml  static_transform_component.cc  static_transform_component.h  static_transform_node.cc
src/modules/transform/proto/: CMakeLists.txt
(+134 files in other folders)
