cmake_minimum_required(VERSION 2.8.3)
project(launch)

find_package(catkin REQUIRED)

####include(/opt/ros/kinetic/share/catkin/cmake/env/CMakeLists.txt)

###################################
## catkin specific configuration ##
###################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES launch
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)