## obstacle_camera_perception
cuda_add_library(perception_inference 
  libtorch/torch_det.cc
  libtorch/torch_net.cc
  onnx/libtorch_obstacle_detector.cc
  # onnx/onnx_obstacle_detector.cc
  operators/roipooling_layer.cc
  operators/roipooling_layer.cu
  tensorrt/plugins/argmax_plugin.cu
  tensorrt/plugins/dfmb_psroi_align_plugin.cu
  tensorrt/plugins/kernels.cu
  tensorrt/plugins/leakyReLU_plugin.cu
  tensorrt/plugins/nms_cuda.cu
  tensorrt/plugins/rcnn_proposal_plugin.cu
  tensorrt/plugins/rpn_proposal_ssd_plugin.cu
  tensorrt/plugins/slice_plugin.cu
  tensorrt/plugins/softmax_plugin.cu
  tensorrt/batch_stream.cc
  tensorrt/entropy_calibrator.cc
  tensorrt/rt_common.cc
  tensorrt/rt_net.cc
  tensorrt/rt_utils.cc
  utils/cuda_util.cu
  utils/gemm.cu
  utils/resize.cu
  utils/util.cu
  utils/util.cc
  inference_factory.cc
  inference.cc
  layer.cc
)
target_link_libraries(perception_inference 
  ${CUDA_LIBRARIES}
  ${TORCH_LIBRARIES}
  ${Boost_LIBRARIES}
  perception_proto
  absl::strings
  absl::raw_logging_internal
  absl::base_internal
  nvinfer
  nvonnxparser
  nvinfer_plugin
)
