<?xml version="1.0"?>
<package format="2">
  <name>data_conversion</name>
  <version>0.0.0</version>
  <description>The data_conversion package</description>
  <maintainer email="apollo@todo.todo">apollo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend> -->
</package>
